--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
+				<version>3.6.2</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -170,11 +170,11 @@
 						<artifactId>aspectjtools</artifactId>
 						<version>${aspectj.version}</version>
 					</dependency>
-					<!-- <dependency> -->
-					<!-- <groupId>org.aspectj</groupId> -->
-					<!-- <artifactId>aspectjrt</artifactId> -->
-					<!-- <version>${aspectj.version}</version> -->
-					<!-- </dependency> -->
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjrt</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
 				</dependencies>
 				<configuration>
 					<aspectLibraries>
@@ -229,12 +229,12 @@
 				</executions>
 			</plugin>
 
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
 				<version>3.8</version>
 				<configuration>
+					<skip>true</skip>
 					<rulesets>
 						<ruleset>spot-framework/pmd-ruleset.xml</ruleset>
 					</rulesets>
@@ -281,6 +281,7 @@
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<version>3.0.4</version>
 				<configuration>
+					<skip>true</skip>
 					<!-- Enables analysis which takes more memory but finds more bugs. If 
 						you run out of memory, changes the value of the effort element to 'low'. -->
 
@@ -303,6 +304,7 @@
 				<artifactId>maven-pmd-plugin</artifactId>
 				<version>3.8</version>
 				<configuration>
+					<skip>true</skip>
 					<rulesets>
 						<ruleset>spot-framework/pmd-ruleset.xml</ruleset>
 					</rulesets>
