--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -250,11 +250,16 @@
 			<version>2.6.0</version>
 		</dependency>
 
-		<!-- dynamic load time weaving support-->
+		<!-- dynamic load time weaving support -->
 		<dependency>
 			<groupId>de.invesdwin</groupId>
 			<artifactId>invesdwin-instrument</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.22.0-GA</version>
 		</dependency>
 	</dependencies>
 </project>
