--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -6,9 +6,6 @@ service.typesystem.rest.port=19000
 service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 
 #hibernate
-# WARNING: never use MyISAM tables as then transactions don't work
-service.persistence.hibernate.dialect.storage_engine=innodb
-service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 # END WARNING
 service.persistence.hibernate.show_sql=true
 service.persistence.hibernate.format_sql=true
@@ -17,17 +14,23 @@ service.persistence.hibernate.enable_lazy_load_no_trans=true
 
 #JDBC configuration, used by JPA and JDO persistence
 #HSQL
-#database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
-#database.jdbc.username=sa
-#database.jdbc.password=
-#service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+service.persistence.hibernate.dialect.storage_engine=
+service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+database.jdbc.driverClassName=org.hsqldb.jdbcDriver
+database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
+database.jdbc.username=sa
+database.jdbc.password=
 
 
 #MYSQL
-database.jdbc.driverClassName=com.mysql.jdbc.Driver
-database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-database.jdbc.username=root
-database.jdbc.password=
+# WARNING: never use MyISAM tables as then transactions don't work
+#service.persistence.hibernate.dialect.storage_engine=innodb
+#service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#database.jdbc.driverClassName=com.mysql.jdbc.Driver
+#database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#database.jdbc.username=root
+#database.jdbc.password=
 
 
 init.default.admin.username=admin
