--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -14,23 +14,23 @@ service.persistence.hibernate.enable_lazy_load_no_trans=true
 
 #JDBC configuration, used by JPA and JDO persistence
 #HSQL
-service.persistence.hibernate.dialect.storage_engine=
-service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
-database.jdbc.driverClassName=org.hsqldb.jdbcDriver
-database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
-database.jdbc.username=sa
-database.jdbc.password=
+#service.persistence.hibernate.dialect.storage_engine=
+#service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+#database.jdbc.driverClassName=org.hsqldb.jdbcDriver
+#database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
+#database.jdbc.username=sa
+#database.jdbc.password=
 
 
 #MYSQL
 # WARNING: never use MyISAM tables as then transactions don't work
-#service.persistence.hibernate.dialect.storage_engine=innodb
-#service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+service.persistence.hibernate.dialect.storage_engine=innodb
+service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
-#database.jdbc.driverClassName=com.mysql.jdbc.Driver
-#database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#database.jdbc.username=root
-#database.jdbc.password=
+database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+database.jdbc.username=root
+database.jdbc.password=
 
 
 init.default.admin.username=admin
