--- a/spot-core-maven-plugins/pom.xml
+++ b/spot-core-maven-plugins/pom.xml
@@ -82,10 +82,10 @@
 		</dependency>
 
 		<!-- logging -->
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-1.2-api</artifactId>
-			<version>2.8.2</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.logging.log4j</groupId> -->
+<!-- 			<artifactId>log4j-1.2-api</artifactId> -->
+<!-- 			<version>2.8.2</version> -->
+<!-- 		</dependency> -->
 	</dependencies>
 </project>
