--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -66,6 +66,20 @@
 			<!-- </execution> -->
 			<!-- </executions> -->
 			<!-- </plugin> -->
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20.1</version>
+				<configuration>
+					<properties>
+						<property>
+							<name>listener</name>
+							<value>at.spot.core.testing.SpotJunitRunListener</value>
+						</property>
+					</properties>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -86,12 +100,6 @@
 			<artifactId>spot-core-support</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
-		<!-- <dependency> -->
-		<!-- <groupId>com.fasterxml.jackson.core</groupId> -->
-		<!-- <artifactId>jackson-databind</artifactId> -->
-		<!-- <version>2.9.2</version> -->
-		<!-- </dependency> -->
 
 		<!-- storage -->
 		<dependency>
@@ -149,21 +157,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.hibernate.javax.persistence</groupId> -->
-		<!-- <artifactId>hibernate-jpa-2.0-api</artifactId> -->
-		<!-- <version>1.0.0.Final</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>javax.el</groupId> -->
-		<!-- <artifactId>javax.el-api</artifactId> -->
-		<!-- <version>3.0.1-b04</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>antlr</groupId> -->
-		<!-- <artifactId>antlr</artifactId> -->
-		<!-- <version>2.7.7</version> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
@@ -219,24 +212,6 @@
 			<artifactId>HikariCP</artifactId>
 			<version>2.7.2</version>
 		</dependency>
-
-		<!-- validation -->
-		<!-- <dependency> -->
-		<!-- <groupId>javax.validation</groupId> -->
-		<!-- <artifactId>validation-api</artifactId> -->
-		<!-- <version>2.0.0.Final</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.hibernate.validator</groupId> -->
-		<!-- <artifactId>hibernate-validator</artifactId> -->
-		<!-- <version>6.0.3.Final</version> -->
-		<!-- </dependency> -->
-
-		<!-- <dependency> -->
-		<!-- <groupId>org.glassfish.web</groupId> -->
-		<!-- <artifactId>javax.el</artifactId> -->
-		<!-- <version>2.2.4</version> -->
-		<!-- </dependency> -->
 
 		<!-- spark rest framework -->
 		<dependency>
