--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,7 @@
 					<findbugsXmlOutputDirectory>${project.build.directory}/findbugs</findbugsXmlOutputDirectory>
 				</configuration>
 				<executions>
-					<!-- Ensures that FindBugs inspects source code when project is compiled. -->
+					<!-- Ensures that FindBugs inspects source code when project is deployed. -->
 					<execution>
 						<id>analyze-deploy</id>
 						<phase>deploy</phase>
