--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -207,6 +207,12 @@
 			<artifactId>HikariCP</artifactId>
 			<version>2.7.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-accessplatform-jpa-rdbms</artifactId>
+			<version>5.1.3</version>
+			<type>pom</type>
+		</dependency>
 
 		<!-- spark rest framework -->
 		<dependency>
