--- a/spot-core-model-infrastructure/pom.xml
+++ b/spot-core-model-infrastructure/pom.xml
@@ -16,5 +16,18 @@
 			<artifactId>spot-core-support</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- dynamic load time weaving support -->
+		<dependency>
+			<groupId>at.spot</groupId>
+			<artifactId>spot-instrumentation</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.22.0-GA</version>
+		</dependency>
+
 	</dependencies>
 </project>
