--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -77,8 +77,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+
 		<!-- JDO / datanucleus -->
+		<dependency>
+			<groupId>org.zoodb</groupId>
+			<artifactId>zoodb</artifactId>
+			<version>0.4.7</version>
+		</dependency>
 		<dependency>
 			<groupId>org.datanucleus</groupId>
 			<artifactId>datanucleus-api-jdo</artifactId>
