--- a/pom.xml
+++ b/pom.xml
@@ -263,7 +263,27 @@
 						<target>${java.version}</target>
 					</configuration>
 				</plugin>
+
+				<plugin>
+					<groupId>net.revelc.code.formatter</groupId>
+					<artifactId>formatter-maven-plugin</artifactId>
+					<version>2.7.1</version>
+					<configuration>
+						<directories>
+							<!-- only format the generated sources -->
+							<directory>${project.basedir}/src/gen/java</directory>
+						</directories>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>format</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 			</plugins>
+
 		</pluginManagement>
 	</build>
 
