--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -13,7 +13,7 @@ service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 # END WARNING
 service.persistence.hibernate.show_sql=true
 service.persistence.hibernate.format_sql=true
-service.persistence.hibernate.hbm2ddl.auto=update
+service.persistence.hibernate.hbm2ddl.auto=create
 service.persistence.hibernate.enable_lazy_load_no_trans=true
 
 #JDBC configuration, used by JPA and JDO persistence
@@ -32,7 +32,7 @@ service.persistence.hibernate.dialect.storage_engine=innodb
 service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
 database.jdbc.username=root
 database.jdbc.password=
 
