--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<log4j.version>2.9.1</log4j.version>
 		<junit.version>4.12</junit.version>
-		<spring.boot.version>2.0.0.RC1</spring.boot.version>
-		<spring.version>5.0.3.RELEASE</spring.version>
-		<aspectj.version>1.9.0.BETA-6</aspectj.version>
+		<spring.boot.version>2.0.1.RELEASE</spring.boot.version>
+		<spring.version>5.0.5.RELEASE</spring.version>
+		<aspectj.version>1.9.0</aspectj.version>
 
 		<!-- nexus repositry -->
 		<nexus.snapshot.host>http://5.249.148.46:8081/repository/spot-snapshot/</nexus.snapshot.host>
