--- a/spot-commerce-spring-base/pom.xml
+++ b/spot-commerce-spring-base/pom.xml
@@ -48,5 +48,11 @@
             <artifactId>spot-cms-base</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        
+         <dependency>
+            <groupId>at.spot</groupId>
+            <artifactId>spot-spring-web-support</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
