--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>at.spot</groupId>
 	<artifactId>spot-framework</artifactId>
-	<version>1.0-beta1</version>
+	<version>1.0-beta2-SNAPSHOT</version>
 	<name>spOt framework</name>
 	<packaging>pom</packaging>
 	<description>The spOt framework parent project</description>
@@ -12,7 +12,7 @@
 		<url>https://github.com/mojo2012/spot-framework</url>
 		<connection>scm:git:https://github.com/mojo2012/spot-framework.git</connection>
 		<developerConnection>scm:git:https://github.com/mojo2012/spot-framework.git</developerConnection>
-	  <tag>1.0-beta1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<licenses>
@@ -262,7 +262,7 @@
 					<dependency>
 						<groupId>at.spot</groupId>
 						<artifactId>build-tools</artifactId>
-						<version>1.0-beta1</version>
+						<version>1.0-beta2-SNAPSHOT</version>
 					</dependency>
 				</dependencies>
 			</plugin>
