--- a/spot-core-base-models/pom.xml
+++ b/spot-core-base-models/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>at.spot</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0-beta1</version>
+		<version>1.0-beta2-SNAPSHOT</version>
 	</parent>
 
 
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>at.spot</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
-			<version>1.0-beta1</version>
+			<version>1.0-beta2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
